tweaking the threhsolding